--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "Mizan Team",
   "license": "Apache-2.0",
-  "name": "@exam/eslint-config",
+  "name": "@alirezark/eslint-config",
   "version": "1.0.1",
   "description": "Mizan's ESLint config",
   "keywords": [
@@ -14,7 +14,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://git.inre.ir/iranhr-front-developers/eslint-config.git"
+    "url": "https://github.com/alirezark/eslint-config.git"
   },
   "files": [
     "index.js"
